EVALSYS-1290 Fixed stepped scale alignment
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/branches/unicon-ucb@80663 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/tool/src/webapp/content/css/evaluation_base.css
+++ b/tool/src/webapp/content/css/evaluation_base.css
@@ -1872,6 +1872,9 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
 .evaluation .item-group .item .matrix .response-list {
   padding-top: 0 !important;
 }
+.evaluation .steppedItemGroup .choiceGroup {
+  padding-right: 0.2em;
+}
 .evaluation .steppedItemGroup img,
 .evaluation .steppedItemGroup table td {
   vertical-align: middle;
